tests: Migrate to assertj
- Some minor code improvements
- Fix warnings (add suppress annotation when not possible)